*2.0.0 alpha 1* (June 25, 2009)

* Element#morph is now queueing automatically  (Thomas Fuchs)

* S2.FX.Base#cancel to abort effects in current state, S2.FX.Base#finish to instantaneously finish effects  (Thomas Fuchs)

* Effect options now recognize the following shortcuts: Strings "slow" and "fast" are mapped to { duration:1 } and { duration:.1 }, functions are mapped to { after: function }, and numbers are mapped to { duration:number }.  [#1 state:resolved] (Thomas Fuchs, Radoslav Stankov)

* Default effect length is now 0.2 seconds.  (Thomas Fuchs)