@@ -1,3 +1,8 @@
+* WebKit CSS transition support and support for cubic-bezier easing (JS implementation of transition-timing-function)
+  WebKit support is transparent - if running on a supported browser, and the morph requested can be made
+  with CSS-based animation, it will automatically use the -webkit-transition-* CSS properties instead of the 
+  JavaScript-based engine.
+
 *2.0.0 alpha 1* (June 25, 2009)
 
 * Element#morph is now queueing automatically  (Thomas Fuchs)
